@@ -91,6 +91,7 @@ Additions:
    * Add "selected,invalid" smart callback for fileselector.
    * elm_object_item : Introduces new APIs, elm_object_item_track(), elm_object_item_untrack(), elm_object_item_track_get().
    * Add elm_widget_item_part_text_custom_set(), elm_widget_item_part_text_custom_get(), elm_widget_item_part_text_custom_update(). 
+   * Add "dismissed" smart callback for hover.
 
 Improvements:
 
